Sistema de sessão migrado para Claims e adicionado login e cadastro com Google

--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,5 @@ GameDB-v3/wwwroot/lib/jquery-validation/LICENSE.md
 GameDB-v3/wwwroot/lib/jquery/LICENSE.txt
 GameDB-v3/appsettings.Development.json
 GameDB-v3/appsettings.json
+GameDB-v3/DataProtectionKeys/key-f6b196f1-3981-4e38-806b-d5930109bebf.xml
+GameDB-v3/DataProtectionKeys/key-f6b196f1-3981-4e38-806b-d5930109bebf.xml
