--- a/GameDB-v3/Properties/launchSettings.json
+++ b/GameDB-v3/Properties/launchSettings.json
@@ -32,6 +32,12 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+    "TESTE": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
