--- a/Z2.Services/Z2.Services.csproj
+++ b/Z2.Services/Z2.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Google_GenerativeAI" Version="3.4.1" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
@@ -18,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Z1.Model\Z1.Model.csproj" />
     <ProjectReference Include="..\Z3.DataAccess\Z3.DataAccess.csproj" />
+    <ProjectReference Include="..\Z4.Lib\Z4.Lib.csproj" />
   </ItemGroup>
 
 </Project>
